--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -12,12 +12,27 @@
 
     <artifactId>demo</artifactId>
     <dependencies>
-        <!-- something should be here-->
-
+        <dependency>
+        <groupId>org.epam.utils</groupId>
+        <artifactId>StringUtils</artifactId>
+        <version>1.0</version>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
