--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <groupId>org.epam.utils</groupId>
-    <artifactId>StringUtils</artifactId>
+    <artifactId>Util</artifactId>
     <version>1.0</version>
 
     <dependencies>
