--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -14,8 +14,12 @@
     <dependencies>
         <dependency>
         <groupId>org.epam.utils</groupId>
-        <artifactId>Util</artifactId>
+        <artifactId>utils</artifactId>
         <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -23,16 +27,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-</project>
+  </project>
